<resources>
    <string name="app_name">Money Planner</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="signup">SignUp</string>
    <string name="or_continue_with">Or continue with ⇒</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>

    <string name="email_address_error">Email Address is not valid</string>
    <string name="password_error">Password is not valid</string>
    <string name="user_creation_validation">User has been successfully created</string>
    <string name="user_creation_error">Could not create new user, please try again</string>
</resources>