<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    >

    <EditText
        android:id="@+id/logInActivityPassword"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <Button
        android:id="@+id/logInActivityLogInBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/material_dynamic_neutral70"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textColor="@color/material_dynamic_neutral30"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPartThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/or_continue_with"
        android:textColor="@color/material_dynamic_neutral50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/logInActivitySignUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInActivityLogInBtn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/logInActivitySignUpBtn"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:backgroundTint="@color/material_dynamic_neutral80"
        android:fontFamily="sans-serif-black"
        android:text="@string/signup"
        android:textColor="@color/material_dynamic_neutral40"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <EditText
        android:id="@+id/logInActivityEmail"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="9dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/email_address"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

</androidx.constraintlayout.widget.ConstraintLayout>